--- a/src/app/all-houses/all-houses.component.html
+++ b/src/app/all-houses/all-houses.component.html
@@ -18,7 +18,7 @@
         <td>{{ house.pilseta }}</td>
         <td>{{ house.valsts }}</td>
         <td>
-          <a [routerLink]="['/house', house.id]">Apskatīt Detaļas</a>
+          <a [routerLink]="['/house', house.id]">Apskatīt</a>
         </td>
       </tr>
     </tbody>
