--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,16 +1,40 @@
-<p>login works!</p>
 <div class="container mt-5">
-  <h1 class="text-center mb-4">Login</h1>
-  <form (submit)="onLogin()">
-    <div class="form-group">
-      <label for="username">Username</label>
-      <input type="text" id="username" class="form-control" [(ngModel)]="username" name="username" required>
+  <div class="card">
+    <div class="card-header text-center">
+      <h1>Login</h1>
     </div>
-    <div class="form-group">
-      <label for="password">Password</label>
-      <input type="password" id="password" class="form-control" [(ngModel)]="password" name="password" required>
+    <div class="card-body">
+      <form (submit)="onLogin()">
+        <div class="form-group">
+          <label for="username">Username</label>
+          <input type="text" id="username" class="form-control" [(ngModel)]="username" name="username" required>
+        </div>
+        <div class="form-group mt-3">
+          <label for="password">Password</label>
+          <input type="password" id="password" class="form-control" [(ngModel)]="password" name="password" required>
+        </div>
+        <button type="submit" class="btn btn-primary my-3">Login</button>
+      </form>
+      <div *ngIf="errorMessage" class="alert alert-danger mt-2">{{ errorMessage }}</div>
+      <div class="alert-success p-3">
+        <strong>Login Credentials:</strong>
+        <hr>
+        <code>
+          <strong>Manager</strong>
+          <br>
+          Username: admin
+          <br>
+          Password: Admin&#64;123
+        </code>
+        <hr>
+        <code>
+          <strong>Resident</strong>
+          <br>
+          Username: user
+          <br>
+          Password: User&#64;123
+        </code>
+      </div>
     </div>
-    <button type="submit" class="btn btn-primary">Login</button>
-  </form>
-  <div *ngIf="errorMessage" class="alert alert-danger mt-2">{{ errorMessage }}</div>
+  </div>
 </div>
