--- a/src/app/all-houses/all-houses.component.html
+++ b/src/app/all-houses/all-houses.component.html
@@ -2,7 +2,7 @@
   <h1 class="text-center mb-4">Visas Mājas</h1>
   <table class="table table-striped table-hover">
     <thead class="table-dark">
-      <tr>
+      <tr class="text-center align-middle">
         <th>Numurs</th>
         <th>Iela</th>
         <th>Pilsēta</th>
@@ -12,12 +12,12 @@
     </thead>
     <tbody>
       <tr *ngFor="let house of houses">
-        <td>{{ house.numurs }}</td>
-        <td>{{ house.iela }}</td>
-        <td>{{ house.pilseta }}</td>
-        <td>{{ house.valsts }}</td>
-        <td>
-          <a [routerLink]="['/house', house.id]">Apskatīt</a>
+        <td class="text-center align-middle">{{ house.numurs }}</td>
+        <td class="text-center align-middle">{{ house.iela }}</td>
+        <td class="text-center align-middle">{{ house.pilseta }}</td>
+        <td class="text-center align-middle">{{ house.valsts }}</td>
+        <td class="text-center align-middle">
+          <a [routerLink]="['/house', house.id]" class="btn btn-primary">Apskatīt</a>
         </td>
       </tr>
     </tbody>
